WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196304
REGRESSION (
r242687
): Fullscreen YouTube videos show blank white space at top
https://bugs.webkit.org/show_bug.cgi?id=196304
Summary
REGRESSION (r242687): Fullscreen YouTube videos show blank white space at top
Simon Fraser (smfr)
Reported
2019-03-27 10:15:04 PDT
REGRESSION (
r242687
): Fullscreen YouTube videos show blank white space at top
Attachments
Patch
(4.99 KB, patch)
2019-03-27 10:16 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-03-27 10:16:02 PDT
Created
attachment 366078
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-03-27 10:16:04 PDT
<
rdar://problem/49175760
>
WebKit Commit Bot
Comment 3
2019-03-27 11:06:55 PDT
Comment on
attachment 366078
[details]
Patch Clearing flags on attachment: 366078 Committed
r243550
: <
https://trac.webkit.org/changeset/243550
>
WebKit Commit Bot
Comment 4
2019-03-27 11:06:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug