REGRESSION (r242687): Fullscreen YouTube videos show blank white space at top https://bugs.webkit.org/show_bug.cgi?id=196304 rdar://problem/49175760

Reviewed by Zalan Bujtas.

Source/WebCore:

repositionRelatedLayers() should not short-circuit when topContentInset is zero,
because topContentInset might be changing from non-zero to zero, and then we need
to move layers around.

Test: scrollingcoordinator/mac/top-content-inset-to-zero.html

* page/scrolling/mac/ScrollingTreeFrameScrollingNodeMac.mm:
(WebCore::ScrollingTreeFrameScrollingNodeMac::repositionRelatedLayers):

LayoutTests:

* scrollingcoordinator/mac/top-content-inset-to-zero-expected.html: Added.
* scrollingcoordinator/mac/top-content-inset-to-zero.html: Added.


Canonical link: https://commits.webkit.org/210598@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243550 268f45cc-cd09-0410-ab3c-d52691b4dbfc